--- a/base/admin-frontend/package.json
+++ b/base/admin-frontend/package.json
@@ -16,12 +16,21 @@
     "react-dom": "19.1.0",
     "@tanstack/react-query": "^5.51.1",
     "zod": "^3.23.8",
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "cloudinary": "^2.0.1",
+    "lucide-react": "^0.344.0",
+    "react-hook-form": "^7.51.0",
+    "@hookform/resolvers": "^3.3.4",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35"
   }
 }
