--- a/base/admin-frontend/package.json
+++ b/base/admin-frontend/package.json
@@ -6,19 +6,19 @@
     "node": ">=18.18.0"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "@tanstack/react-query": "^5.51.1",
     "zod": "^3.23.8",
     "axios": "^1.7.7",
     "cloudinary": "^2.0.1",
-    "lucide-react": "^0.344.0",
+    "lucide-react": "^0.400.0",
     "react-hook-form": "^7.51.0",
     "@hookform/resolvers": "^3.3.4",
     "clsx": "^2.1.0",
@@ -27,8 +27,8 @@
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35"
